Simplify the INET_DIAG_BC bytecode to be simple checks of the port and direct terminal jumps to the end of the bytecode buffer on failures. The address is currently not checked because it seems to cause failures.
Correct the handling of IPv4/IPv6/IPv6-v4mapped addresses to work in all
cases.  The new code is much simpler as well.

Use MSG_WAITALL for the initial recvmsg for the kernel netlink socket reply.

Break from netlink reply parsing if NLMSG_DONE or NLMSG_ERROR are encountered.

Fix the handling of multiple-message replies to netlink queries.  Before
only the first message would be handled.

--- a/README
+++ b/README
@@ -206,7 +206,7 @@ example of .ident:
 
 The first rule will match any host asking about any of our connections to its
 ports 6667, 6668, 6669, or 7000.  nident will reply to these queries with an
-eight character Tiger-derived hash constructed from the username that owns the
+eight character BLAKE-derived hash constructed from the username that owns the
 connection, the ip of the machine making the query, and the port number to
 which we are connected.  This rule would perhaps be useful for connecting to
 irc servers that demand an ident response, as the hash will be the same on
